--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 <header class="header">
   <a href="#" class="logo" >Gilbert Perez. </a>
-
+  
   
   <nav class="navbar">
-    <a href="#home">Home</a>
+    <a href="#" class="active"  >Home</a>
     <a href="#about">About</a>
     <a href="#skills">Skills</a>
     <a href="#portfolio">Portfolio</a>
@@ -21,8 +21,26 @@
 
 
   </nav>
+  </header>
+
+<section class="home">
+  <div class="home-content">
 
 
+    <h2>Hello im <h1 class="blur">Gilbert Perez</h1></h2>
+    <h3>Full Stack Developer</h3>
+     <p>  Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+      Unde aspernatur expedita deleniti magni quibusdam illo eum, 
+      at dignissimos obcaecati provident facilis 
+      ex laborum doloremque quia totam illum enim sapiente eaque.  </p>
+
+      <div class="btn-box">
+
+        <a href="#" class="btn">Hire Me</a>
+        <a href="#" class="btn">Let's Talk</a>
+      </div>
+
+  </div>
 
   </body>
 </html>
