--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 
       <div class="btn-box">
 
-        <a href="#" class="btn">Hire Me</a>
-        <a href="#" class="btn">Let's Talk</a>
+        <a href="#" class="btn">Contact</a>
       </div>
 
   </div>
