added links to projects, upded articke sections

--- a/index.html
+++ b/index.html
@@ -5,41 +5,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gilberto Perez Portfolio</title>
     <link rel="stylesheet" href="./assets/style.css" />
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
 
-<header class="header">
+  <header class="header">
   <a href="#" class="logo" >Gilbert Perez. </a>
   
-  
   <nav class="navbar">
-    <a href="#" class="active"  >Home</a>
+    <a href="#home">Home</a>
     <a href="#about">About</a>
     <a href="#skills">Skills</a>
     <a href="#portfolio">Portfolio</a>
     <a href="#contact">Contact</a>
-
-
   </nav>
+ 
   </header>
-
-<section class="home">
-  <div class="home-content">
-
-
-    <h2>Hello im <h1 class="blur">Gilbert Perez</h1></h2>
-    <h3>Full Stack Developer</h3>
-     <p>  Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+  <main>
+  <section id="home" class="home">
+      <div class="home-content">
+      <h2>Hello im <h1 class="blur">Gilbert Perez</h1></h2>
+      <h3>Full Stack Developer</h3>
+      <p>  Lorem ipsum dolor sit amet consectetur adipisicing elit. 
       Unde aspernatur expedita deleniti magni quibusdam illo eum, 
       at dignissimos obcaecati provident facilis 
       ex laborum doloremque quia totam illum enim sapiente eaque.  </p>
 
       <div class="btn-box">
-
-        <a href="#" class="btn">Contact</a>
+      <a href="mailto:gilbertperezdt@gmail.com" class="btn">Contact</a>
       </div>
-
   </div>
 
-  </body>
+  <div class="home-sci">
+     <a href="https://slack.com/"><i class='bx bxl-slack' ></i></a>
+     <a href="https://github.com/Homelesscats"><i class='bx bxl-github' ></i></a>
+     <a href="https://www.linkedin.com/"><i class='bx bxl-linkedin' ></i></a>
+  </div>
+  
+<article>
+<div id="about" class="section">
+    <h2>
+      About Me
+    </h2>
+    <p>
+  After 10 years of working in the dental industry, I decided to make a career change to pursue my passion for technology. I am a Full Stack Developer with a background in customer service and management. I am a team player with a strong work ethic and a desire to learn.
+    </p>
+  </div>
+</article>
+
+<article>
+    <div id="skills"  class="section" >
+    <h2>Skills</h2>
+    <p>A skilled full-stack developer with expertise in HTML, CSS, JavaScript, Node.js, MySQL, MongoDB, React, and a strong willingness to learn more possesses a diverse skill set that allows them to handle both front-end and back-end development tasks. </p>
+    </div>
+</article>
+
+<article>
+  <div id="portfolio" class="section">
+    <h2>Portfolio</h2>
+    <p>(Please  be sure to sign up for alerts to be notified when new projects have been uploaded) Below are some links to my work: </p>
+    <a href="https://secret-scrubland-76377-bb0e72ad3cf2.herokuapp.com/">Just Another Text Editor</a>
+    <a href="https://homelesscats.github.io/Weather-Dashboard/">Weather Dashboard</a>
+    <a href="https://homelesscats.github.io/Work-Day-Scheduler/">Work Day Scheduler</a>
+    <a href="https://homelesscats.github.io/Password-Generator/">Password Generator</a>
+    <a href="https://aqueous-taiga-75377-74ce5fd909e7.herokuapp.com/"?>Group Project: Funko Fever</a>
+  </div>
+</div>
+</article>
+
+</main>
+</body>
 </html>
