--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
       <div class="home-content">
       <h2>Hello im <h1 class="blur">Gilbert Perez</h1></h2>
       <h3>Full Stack Developer</h3>
-      <p>  Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-      Unde aspernatur expedita deleniti magni quibusdam illo eum, 
-      at dignissimos obcaecati provident facilis 
-      ex laborum doloremque quia totam illum enim sapiente eaque.  </p>
+      <p> Dental Lab Tech/Full Stack Developer looking to make an impact in the digital dental industry  </p>
 
       <div class="btn-box">
       <a href="mailto:gilbertperezdt@gmail.com" class="btn">Contact</a>
